# mai-informatical-retrieval

./: .gitignore  .gitmodules  README.md  docker-compose.yml  main.ipynb  scraper.yml
l1/: main.ipynb
scraping/: analysis.ipynb  main.ipynb  requirements.txt
scraping/src/: common.py  log.py
scraping/src/config/: config.py
scraping/src/savers/: interfaces.py  mongo.py
scraping/src/scrapers/: habr.py  interfaces.py  rbc.py  utils.py
search-engine/: CMakeLists.txt
search-engine/include/: boolean_index.hpp  connector.hpp  hashmap.hpp  log.hpp  server.hpp  skiplist.hpp
search-engine/src/: connector.cpp  log.cpp  main.c  main.cpp  server.cpp
search-engine/tests/: CMakeLists.txt  test_boolean_index.cpp  test_hashmap.cpp  test_skiplist.cpp
src/: interfaces.py  log.py
src/scrapers/: rbc.py  utils.py
